syntax = "proto3";

option go_package = ".;pbgetresposible";

package pbmessage;

message GetResponsibleReq {
    int32 DeviceID = 1;
}

message GetResponsibleResp {
    repeated int32 ResponsibleID = 1;
}
